8025313: MetaspaceMemoryPool incorrectly reports undefined size for max

Reviewed-by: stefank, tschatzl